--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res/com.next.customview"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="ResAuto">
 
-    <TextView
-        android:text="@string/hello_world"
+    <com.next.customview.PieChart
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_centerInParent="true"
+        android:padding="10dp"
+        custom:labelPosition="left"
+        custom:textColor="#f9c813"
+        custom:textString="认真，你就赢了"
+        custom:textWidth="200"
+        custom:textHeight="160"
+        custom:textSize="20sp"
+        />
+
+    <!--
+    <com.next.customview.CustomTitleView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        custom:titleText="0123"
+        android:padding="10dp"
+        custom:titleTextColor="#ff0000"
+        android:layout_centerInParent="true"
+        custom:titleTextSize="40sp" />
+        -->
 
 </RelativeLayout>
