--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.next.customview"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#cccccc"
     tools:context=".MainActivity"
     tools:ignore="ResAuto">
 
-    <com.next.customview.PieChart
+    <com.next.customview.view.ClickableText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -21,15 +21,11 @@
         custom:textSize="20sp"
         />
 
-    <!--
-    <com.next.customview.CustomTitleView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/demo_2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        custom:titleText="0123"
-        android:padding="10dp"
-        custom:titleTextColor="#ff0000"
-        android:layout_centerInParent="true"
-        custom:titleTextSize="40sp" />
-        -->
+        android:layout_alignParentBottom="true"
+        android:text="demo 2"/>
 
 </RelativeLayout>
