模拟跑道，奔跑
模拟跑道，奔跑

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -43,4 +43,10 @@
         <attr name="speed" />
     </declare-styleable>
 
+    <!-- 圆角矩形 -->
+    <declare-styleable name="CustomTrackView">
+        <attr name="firstColor" />
+        <attr name="secondColor" />
+    </declare-styleable>
+
 </resources>
